--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
       <div class="icons-contact">
         <a
-          href="https://www.facebook.com/yamen.sabbah.39/?viewas=100000686899395"
+          href="https://www.facebook.com/yamen.sabbah.39/about"
           class="first-link"
           target="_blank"
         >
