--- a/index.html
+++ b/index.html
@@ -4,107 +4,93 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Portfolio of Yamen, a Computer Engineering student and Front-End Developer.">
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
-    <title>Yamen Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <title>Yamen | Portfolio</title>
   </head>
   <body>
-    <!--!----------------------------------  ⁡⁣⁢⁢​‌‌‍⁡⁢⁣⁢​‌‍‌𝗛𝗲𝗮𝗱𝗲𝗿 𝘀𝗲𝗰𝘁𝗶𝗼𝗻⁡⁡​​​⁡ ------------------------------------->
-    <div class="Head" id="First-section">
-      <header class="container">
-        <nav class="links">
-          <img
-            src="./images/Yamen_logo.png"
-            class="Yamen-logo"
-            width="80px"
-            alt=""
-            draggable="false"
-          />
-          <a draggable="false" href="#First-section">Home</a>
-          <a draggable="false" href="#Second-section">About</a>
-          <a draggable="false" href="#Third-section">Contact</a>
-        </nav>
-      </header>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="my-image">
-        <img
-          class="YamenImage"
-          draggable="false"
-          src="./images/Yamen.png"
-          alt="Yamen"
-        />
-        <h1>Hello , it's me Yamen<br />Computer Engineering.</h1>
+    <!-- Header Section -->
+    <header class="header" id="home">
+      <nav class="navbar container">
+        <a href="#home" class="logo">
+          <img src="./images/Yamen_logo.png" alt="Yamen Logo" width="50" height="50">
+          <span>Yamen</span>
+        </a>
+        <div class="nav-links">
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#contact">Contact</a>
+        </div>
+        <button class="menu-toggle" aria-label="Toggle navigation">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </nav>
+      
+      <div class="hero container">
+        <div class="hero-content">
+            <h1>Hello, I'm Yamen.</h1>
+            <p>Computer Engineeering Student & Front-End Developer</p>
+            <a href="#contact" class="cta-button">Get in Touch</a>
+        </div>
+        <div class="hero-image">
+           <img src="./images/Yamen.png" alt="Yamen" class="profile-img"/>
+        </div>
       </div>
-    </div>
+    </header>
 
-    <!--~--------------------------------- ​‌‍​‌‍‌𝗔𝗯𝗼𝘂𝘁 𝗦𝗲𝗰𝘁𝗶𝗼𝗻​​​ ----------------------------------->
-    <section class="about" id="Second-section">
-      <div class="about-first">
-        <img
-          draggable="false"
-          src="./images/PTUK.png"
-          alt="Kadoorie University"
-          title="Kadoorie University"
-        />
-        <h2>
-          i'm a student in <br />
-          <span>Kadoorie University</span> <br />
-          studying programming and <br />
-          Computer Engineering.
-        </h2>
-      </div>
-      <div class="about-second">
-        <h2>
-          im a front end developer and road to<span style="color: red">
-            full stack.</span
-          >
-        </h2>
-        <img src="./images/front-end.png" alt="Front-end" draggable="false" />
-      </div>
-      <div class="about-third">
-        <img src="./images/C++.png" alt="C++ figure" />
-        <h2>
-          i have studied C++ and many concepts like OOP , Data Stuctures , Git ,
-          Algorithms
-        </h2>
+    <!-- About Section -->
+    <section class="about section" id="about">
+      <div class="container">
+        <h2 class="section-title">About Me</h2>
+        <div class="about-grid">
+            <div class="about-card">
+                <i class="fa-solid fa-graduation-cap"></i>
+                <h3>Education</h3>
+                <p>Student at <strong>Kadoorie University</strong></p>
+                <p>Computer Engineering</p>
+            </div>
+            <div class="about-card">
+                <i class="fa-solid fa-code"></i>
+                <h3>Development</h3>
+                <p>Front-End Developer on the road to Full Stack.</p>
+            </div>
+            <div class="about-card">
+                <i class="fa-brands fa-cuttlefish"></i>
+                <h3>Skills</h3>
+                <p>C++, OOP, Data Structures, Algorithms, Git</p>
+            </div>
+        </div>
       </div>
     </section>
-    <!--^---------------------------------------- ​‌‍‌𝗖𝗼𝗻𝘁𝗮𝗰𝘁 𝗦𝗲𝗰𝘁𝗶𝗼𝗻​ ----------------------------->
-    <footer class="Contact" id="Third-section">
-      <div class="links">
-        <h2>Contact me</h2>
+
+    <!-- Contact Section -->
+    <section class="contact section" id="contact">
+      <div class="container">
+        <h2 class="section-title">Contact Me</h2>
+        <div class="contact-links">
+            <a href="https://www.facebook.com/yamen.sabbah.39/about" target="_blank" class="social-link facebook">
+                <i class="fa-brands fa-facebook"></i>
+                <span>Facebook</span>
+            </a>
+            <a href="https://discord.com/users/763845354311254088" target="_blank" class="social-link discord">
+                <i class="fa-brands fa-discord"></i>
+                <span>Discord</span>
+            </a>
+        </div>
       </div>
-      <div class="icons-contact">
-        <a
-          href="https://www.facebook.com/yamen.sabbah.39/about"
-          class="first-link"
-          target="_blank"
-        >
-          <i class="fa-brands fa-facebook"></i>
-          <span class="facebook">Facebook</span>
-        </a>
-        <a
-          href="https://discord.com/users/763845354311254088"
-          class="second-link"
-          target="_blank"
-        >
-          <i class="fa-brands fa-discord"></i>
-          <span class="discord">Discord</span>
-        </a>
-      </div>
+    </section>
+
+    <footer class="footer">
+        <p>&copy; 2024 Yamen. All rights reserved.</p>
     </footer>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
