--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="about-card">
                 <i class="fa-brands fa-cuttlefish"></i>
                 <h3>Skills</h3>
-                <p>C++, OOP, Data Structures, Algorithms, Git</p>
+                <p>C++, OOP, Data Structures, Algorithms, Git , PHP , Node.Js , SQL</p>
             </div>
         </div>
       </div>
